# agent-eval

./: .editorconfig  .env.example  .gitignore  Dockerfile  Justfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  ruff.toml
prompts/: agent.j2
src/agent_eval/: __init__.py  agent.py  cli.py  pipeline.py  schemas.py  utils.py
src/agent_eval/core/: config.py  logging.py  providers.py
src/agent_eval/functions/: calc.py
src/agent_eval/servers/: mcp.py
src/agent_eval/tools/: __init__.py  calc.py
src/llm_agent_template/: agent.py  cli.py  pipeline.py
src/llm_agent_template/core/: config.py  logging.py  prompts.py
src/llm_agent_template/tools/: __init__.py  calc.py
tasks/: _template.yaml
